# aic-ai-poc-gpt

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: aws_cluster.yaml  finetune.yaml  inference.yaml  train_small.yaml
configs/data/: filters.yml  mixture_code_heavy.yml  mixture_default.yml  packing.yml
configs/models/: gptx_13b.yml  gptx_200b.yml  gptx_70b.yml  gptx_7b.yml  gptx_moe_1t.yml  rope_alibi_variants.yml
configs/serve/: fastapi.yml  trtllm.yml  vllm.yml
configs/train/: deepspeed_zero3.json  dpo.yml  pretrain_base.yml  pretrain_longctx.yml  sft.yml
data/: README.md  preprocessing.py  sample_train.jsonl
data/builders/: books_pipeline.py  dedupe.py  (+2 more)
evals/: benchmark_latency.py  perplexity.py  safety_checks.py
examples/: pretrain_longctx.sh  serve_trtllm.sh  serve_vllm.sh  train_mid.sh  train_small.sh
gptx/: __init__.py
inference/: lambda_handler.py  serve.py  server_fastapi.py
notebooks/: 01_model_sanity_check.ipynb  02_memory_compute_estimator.ipynb  03_long_context_pi_ntk.ipynb  04_serving_latency_tradeoffs.ipynb  finetune_demo.ipynb  inference_demo.ipynb
safety/: filters.py  redteam.md
scripts/: convert_checkpoint.py  export_onnx.py  export_trtllm.py  export_vllm.py  launch_ddp.sh  launch_deepspeed.sh  launch_fsdp.sh  merge_lora.py  profile_train.sh  tokenizer_train.py
tests/: test_block_shapes.py  test_checkpoint_convert.py  test_kv_cache.py  test_rope_alibi.py  test_sampler.py
tokenizers/: spm_model.py  train_spm.py  utils.py
training/: finetune_lora_minimal.py  train.py
(+60 files in other folders)
